--- a/Resume Template/index.html
+++ b/Resume Template/index.html
@@ -69,7 +69,7 @@
             <li>
               <span class="sub-heading"
                 >Fullstack MERN Developer at RTE Softwares :
-                <span class="text-bold"> Mar, 2022 - pågående</span></span
+                <span class="text-bold"> Mar, 2022 - today</span></span
               >
               <ul class="mt-5">
                 <li>Working as Senior Web Developer & Team Leader</li>
